@@ -1,12 +1,17 @@
 from zope.component import getMultiAdapter
+
 from plone.app.layout.dashboard import dashboard
 from plone.memoize.instance import memoize
+
 from Products.CMFCore.utils import getToolByName
+from Products.Five.browser import BrowserView
 
 
-class DashboardView(dashboard.DashboardView):
-
-    MAX_ELEMENTS = 5
+class DashboardMixin(object):
+    query_extra_params = {
+        'sort_on': 'modified',
+        'sort_order': 'descending'
+    }
 
     @memoize
     def tools(self):
@@ -21,6 +26,54 @@ class DashboardView(dashboard.DashboardView):
             name='plone_portal_state'
         )
 
+    @property
+    def user(self):
+        user = None
+        portal_state = self.portal_state()
+        if not portal_state.anonymous():
+            user = portal_state.member()
+        return user
+
+    @property
+    def searches(self):
+        if self.portal_state().anonymous():
+            return []
+
+        return [
+            ({'portal_type': 'PoiIssue',
+              'getResponsibleManager': self.user.getId(),
+              'review_state': ('new', 'open', 'in-progress', 'resolved',
+                                'unconfirmed')},
+             'tickets'),
+            ({'portal_type': 'Story',
+              'assigned_to': self.user.getId(),
+              'review_state': ('todo', 'suspended', 'in_progress')},
+              'stories')
+        ]
+
+
+class MyTickets(BrowserView, DashboardMixin):
+
+    def tickets(self):
+        query = self.searches[0][0]
+        query.update(self.query_extra_params)
+        pc = self.tools()['portal_catalog']
+        return pc.searchResults(query)
+
+
+class MyStories(BrowserView, DashboardMixin):
+
+    def stories(self):
+        query = self.searches[1][0]
+        query.update(self.query_extra_params)
+        pc = self.tools()['portal_catalog']
+        return pc.searchResults(query)
+
+
+class DashboardView(dashboard.DashboardView, DashboardMixin):
+
+    MAX_ELEMENTS = 5
+
     def dashboard(self):
         result = {
             'tickets': [],
@@ -28,30 +81,12 @@ class DashboardView(dashboard.DashboardView):
             'stories': [],
             'stories_n': 0
         }
-        portal_state = self.portal_state()
-        if not portal_state.anonymous():
-            user = portal_state.member()
-            pc = self.tools()['portal_catalog']
-            searches = [
-                ({'portal_type': 'PoiIssue',
-                  'getResponsibleManager': user.getId(),
-                  'review_state': ('new', 'open', 'in-progress', 'resolved',
-                                    'unconfirmed')},
-                 'tickets'),
-                ({'portal_type': 'Story',
-                  'assigned_to': user.getId(),
-                  'review_state': ('todo', 'suspended', 'in_progress')},
-                  'stories')
-            ]
-            for query, result_key in searches:
-                query.update({
-                    'path': '/'.join(self.context.getPhysicalPath()),
-                    'sort_on': 'modified',
-                    'sort_order': 'descending'
-                })
-                results = pc.searchResults(query)
-                result[result_key] = results[:self.MAX_ELEMENTS]
-                result['%s_n' % result_key] = total = len(results)
-                if total <= self.MAX_ELEMENTS:
-                    result['%s_n' % result_key] = False
+        pc = self.tools()['portal_catalog']
+        for query, result_key in self.searches:
+            query.update(self.query_extra_params)
+            results = pc.searchResults(query)
+            result[result_key] = results[:self.MAX_ELEMENTS]
+            result['%s_n' % result_key] = total = len(results)
+            if total <= self.MAX_ELEMENTS:
+                result['%s_n' % result_key] = False
         return result
