@@ -1,0 +1,23 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="context/main_template/macros/master"
+      i18n:domain="abstract.simplemanagement">
+  <body>
+
+    <metal:title fill-slot="content-title">
+      <h1 i18n:translate="">My stories</h1>
+    </metal:title>
+
+    <metal:content-core fill-slot="content-core">
+      <metal:block define-macro="content-core"
+          tal:define="stories view/stories">
+        <metal:stories
+          use-macro="context/simpemanagement-macros/stories-shortlist" />
+      </metal:block>
+    </metal:content-core>
+
+  </body>
+</html>
